--- a/publication_types/2/index.html
+++ b/publication_types/2/index.html
@@ -18,7 +18,7 @@
   <meta name="description" content="PhD student at Iowa State University">
 
   
-  <link rel="alternate" hreflang="en-us" href="https://calebleedy.github.io/publication_types/2/">
+  <link rel="alternate" hreflang="en-us" href="/publication_types/2/">
 
   
 
@@ -59,15 +59,15 @@
   
 
   
-  <link rel="alternate" href="https://calebleedy.github.io/publication_types/2/index.xml" type="application/rss+xml" title="Processing Thoughts">
-  <link rel="feed" href="https://calebleedy.github.io/publication_types/2/index.xml" type="application/rss+xml" title="Processing Thoughts">
+  <link rel="alternate" href="/publication_types/2/index.xml" type="application/rss+xml" title="Processing Thoughts">
+  <link rel="feed" href="/publication_types/2/index.xml" type="application/rss+xml" title="Processing Thoughts">
   
 
   <link rel="manifest" href="/site.webmanifest">
   <link rel="icon" type="image/png" href="/img/icon.png">
   <link rel="apple-touch-icon" type="image/png" href="/img/icon-192.png">
 
-  <link rel="canonical" href="https://calebleedy.github.io/publication_types/2/">
+  <link rel="canonical" href="/publication_types/2/">
 
   <meta property="twitter:card" content="summary_large_image">
   
@@ -75,7 +75,7 @@
   <meta property="twitter:creator" content="@GeorgeCushen">
   
   <meta property="og:site_name" content="Processing Thoughts">
-  <meta property="og:url" content="https://calebleedy.github.io/publication_types/2/">
+  <meta property="og:url" content="/publication_types/2/">
   <meta property="og:title" content="2 | Processing Thoughts">
   <meta property="og:description" content="PhD student at Iowa State University">
   <meta property="og:locale" content="en-us">
@@ -233,7 +233,7 @@
   
   
   <div>
-    <h2><a href="https://calebleedy.github.io/publication/person-re-identification/">A Person Re-Identification System For Mobile Devices</a></h2>
+    <h2><a href="/publication/person-re-identification/">A Person Re-Identification System For Mobile Devices</a></h2>
     <div class="article-style">
       
     </div>
