--- a/talk/index.html
+++ b/talk/index.html
@@ -16,7 +16,7 @@
   <meta name="description" content="PhD student at Iowa State University">
 
   
-  <link rel="alternate" hreflang="en-us" href="https://calebleedy.github.io/talk/">
+  <link rel="alternate" hreflang="en-us" href="/talk/">
 
   
 
@@ -50,15 +50,15 @@
   
 
   
-  <link rel="alternate" href="https://calebleedy.github.io/talk/index.xml" type="application/rss+xml" title="Processing Thoughts">
-  <link rel="feed" href="https://calebleedy.github.io/talk/index.xml" type="application/rss+xml" title="Processing Thoughts">
+  <link rel="alternate" href="/talk/index.xml" type="application/rss+xml" title="Processing Thoughts">
+  <link rel="feed" href="/talk/index.xml" type="application/rss+xml" title="Processing Thoughts">
   
 
   <link rel="manifest" href="/site.webmanifest">
   <link rel="icon" type="image/png" href="/img/icon.png">
   <link rel="apple-touch-icon" type="image/png" href="/img/icon-192.png">
 
-  <link rel="canonical" href="https://calebleedy.github.io/talk/">
+  <link rel="canonical" href="/talk/">
 
   <meta property="twitter:card" content="summary_large_image">
   
@@ -66,7 +66,7 @@
   <meta property="twitter:creator" content="@GeorgeCushen">
   
   <meta property="og:site_name" content="Processing Thoughts">
-  <meta property="og:url" content="https://calebleedy.github.io/talk/">
+  <meta property="og:url" content="/talk/">
   <meta property="og:title" content="Recent &amp; Upcoming Talks | Processing Thoughts">
   <meta property="og:description" content="PhD student at Iowa State University">
   <meta property="og:locale" content="en-us">
@@ -233,7 +233,7 @@
             
               <div class="pub-list-item" style="margin-bottom: 1rem" itemscope itemtype="http://schema.org/Event">
   <i class="fa fa-comment-o pub-icon" aria-hidden="true"></i>
-  <span itemprop="name"><a href="https://calebleedy.github.io/talk/example-talk/">Example Talk</a></span>
+  <span itemprop="name"><a href="/talk/example-talk/">Example Talk</a></span>
   <div itemprop="startDate">
     
     Jun 1, 2030
@@ -255,7 +255,7 @@
 
 
 
-<a class="btn btn-primary btn-outline btn-xs" href="https://calebleedy.github.io/project/deep-learning/">
+<a class="btn btn-primary btn-outline btn-xs" href="/project/deep-learning/">
   Project
 </a>
 
